; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/src/extr_pt_encoder.c_pt_encode_cyc.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/src/extr_pt_encoder.c_pt_encode_cyc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pt_encoder = type { i32 }
%struct.pt_packet = type { %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@ppt_cyc = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pt_encode_cyc(%struct.pt_encoder* %0, i32 %1) #0 {
  %3 = alloca %struct.pt_encoder*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.pt_packet, align 4
  store %struct.pt_encoder* %0, %struct.pt_encoder** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @ppt_cyc, align 4
  %7 = getelementptr inbounds %struct.pt_packet, %struct.pt_packet* %5, i32 0, i32 1
  store i32 %6, i32* %7, align 4
  %8 = load i32, i32* %4, align 4
  %9 = getelementptr inbounds %struct.pt_packet, %struct.pt_packet* %5, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  store i32 %8, i32* %11, align 4
  %12 = load %struct.pt_encoder*, %struct.pt_encoder** %3, align 8
  %13 = call i32 @pt_enc_next(%struct.pt_encoder* %12, %struct.pt_packet* %5)
  ret i32 %13
}

declare dso_local i32 @pt_enc_next(%struct.pt_encoder*, %struct.pt_packet*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
